added submit button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="buttons">
        <button type="button" id="previous">Previous</button>
        <button type="button" class="next">Next</button>
-       
+<button type="button" id="submit">Submit</button>
     </div>
  </div>
  <div id="score-board">
